# cqpid_php

./: LICENSE.md  Makefile  README.md  cqpid_php.diff  update.sh
cpp/: configure.ac
cpp/bindings/: swig_php_typemaps.i
cpp/bindings/qmf2/php/: php.i
cpp/bindings/qpid/: Makefile.am
cpp/bindings/qpid/examples/php/cli/: client.php  hello_world.php  map_receiver.php  map_sender.php  server.php
cpp/bindings/qpid/php/: Makefile.am  php.i  phpinfo.i
qpid/cpp/: CMakeLists.txt  configure.ac
qpid/cpp/bindings/: CMakeLists.txt  swig_php_typemaps.i
qpid/cpp/bindings/CMakeModules/: FindPHPDev.cmake
qpid/cpp/bindings/qmf2/: CMakeLists.txt  Makefile.am
qpid/cpp/bindings/qmf2/examples/php/cli/: list_agents.php
qpid/cpp/bindings/qmf2/php/: CMakeLists.txt  Makefile.am  php.i
qpid/cpp/bindings/qpid/: Makefile.am
qpid/cpp/bindings/qpid/examples/php/cli/: map_sender.php
qpid/cpp/bindings/qpid/examples/php/web/: hello_world.php
qpid/cpp/bindings/qpid/php/: CMakeLists.txt  Makefile  Makefile.am  php.i
